# anagram-service

./: .gitignore  Anagram.hs  AnagramConfig.hs  AnagramService.hs  AnagramSolver.hs  AnagramTypes.hs  Main.hs  anagram-service.cabal  anagram.cabal  readme.md  resin.cabal
Anagram/: Service.hs  Solver.hs  Types.hs
src/Anagram/: Config.hs  Main.hs
