name:                anagram-service
version:             0.1.0.0
synopsis:            Efficient anagram solving as a web service
description:         Efficient anagram solving as a web service
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+anagram-service@gmail.com>
homepage:            http://github.com/jotrk/anagram-service/
bug-reports:         http://github.com/jotrk/anagram-service/issues

category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/anagram-service.git

executable anagram-service
  main-is:           Main.hs

  build-depends:     base           >= 4.7  && < 4.8,
                     anagram-solver >= 0.1  && < 0.2,
                     bytestring     >= 0.10 && < 0.11,
                     rest-service   >= 0.1  && < 0.2,
                     scotty         >= 0.9  && < 0.10,
                     warp           >= 3.0  && < 3.1

  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
